--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "youtube-uploader"
-version = "0.0.2"
+name = "world-of-warcraft-vod-uploader"
+version = "1.0.0"
 description = "A World of Warcraft app that automatically uploads WarcraftRecorder vods to YouTube"
 authors = ["Notey <info@notey.dev>"]
 readme = "README.md"
