--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "world-of-warcraft-vod-uploader"
-version = "1.0.0"
+version = "1.0.1"
 description = "A World of Warcraft app that automatically uploads WarcraftRecorder vods to YouTube"
 authors = ["Notey <info@notey.dev>"]
 readme = "README.md"
@@ -12,6 +12,10 @@ google-auth-oauthlib = "^0.4.6"
 google-api-python-client = "^2.31.0"
 dynaconf = "^3.2.6"
 pydantic = "^2.10.4"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
+pytest-mock = "^3.14.0"
 
 [build-system]
 requires = ["poetry-core"]
