--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,8 @@
 global:
   log_level: "INFO"
+  uploader: youtube
   warcraft_vods:
-    directory: "D:\\Videos\\Warcraft"
+    directory: "Z:\\wow\\WarcraftRecorder"
     file_types: 
       - ".mp4"
     search_keywords: 
